# tmnn7-8

./: .gitignore  BRANCH.yml  CODE-OF-CONDUCT.md  CODE_OF_CONDUCT.md  Cargo.toml  ELBONIA-INITIATIVE.md  GLANCE.yml  HASKELL-PORT.md  IMPROVEMENTS.md  LICENSE  Makefile  NODEJS-WEBSCALE.md  READ.ME  README.md  RUST-REWRITE.md  SOUL.md  WHITESPACE-AUDIT.md  package.json  package.yaml
.githooks/: README.md  pre-commit  pre-push
.github/: CODEOWNERS
analysis/: ANALYSIS.md  ARCHAEOLOGY.md  BRAGSHEET.md  BY-THE-NUMBERS.md  CATB-IRONY.md  COLLABORATIVE-IMPROV.md  ESR-QUOTES.md  FASCIST.md  GITPROV.md  GITPROV.yml  GLANCE.yml  INDEX.md  INDEX.yml  IRONIES.md  JARGON-FILE.md  LICENSE.md  LIVE-ACTIVITY.md  MANY-EYES.md  OSI-BAN.md  PHILOSOPHY.yml  README.md  RESUME.md  SEX-TIPS.md  SIMULATION.yml  SOCIAL-NETWORK.yml  TESTIMONY.md  TIMELINE.md  VULNERABILITIES.md  art-of-unix-irony.yml  bragsheet.md  bragsheet.yml  by-the-numbers.md  by-the-numbers.yml  catb-irony.md  catb-irony.yml  code-index.yml  code-review.yml  content-moderation-irony.yml  donhopkins-testimony.md  donhopkins-testimony.yml  (+33 more)
designs/: README.md
doc/: BRAGSHEET  BUGS  GLANCE.yml  Makefile  READ.ME  hackguide.mn  howto.mn  install.mn  manners.mn  newgroup.mn  rfc1036.lp  tmac.n
haskell/: README.md
man/: GLANCE.yml  Makefile  bbsauto.1  checknews.1  ednews.1  edvnews.1  expire.8  getdate.3  grpw.1  inews.1  install.mn  locknews.8  mailnews.1  makekits.1  mn.7  news.5  newsfilter.5  newsreaders.5  postnews.1  readnews.1  rnews.8  sendbatch.8  uurec.8  vnews.1  vrn.1
misc/: GLANCE.yml  Makefile  READ.ME  archnews.c  ccs  ednews.el  getmaps  mkbatch.sh  net.recording  news_check  nntp1.5.patch  nntpxfer.c  nntpxmit.patch  spoolbatches
nodejs/: README.md
rewrites/: README.md
rust/: README.md
src-hs/: News.hs
(+433 files in other folders)
