[package]
name = "tmnn-rs"
version = "0.1.0"
edition = "2021"
authors = ["FearlessCrab <fearless@crab.rs>"]
description = "Blazingly fast, memory-safe Usenet news system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SimHacker/tmnn7-8"
keywords = ["usenet", "news", "nntp", "blazingly-fast", "memory-safe"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
lazy_static = "1.4"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
pin-project = "1.1"
futures = "0.3"
async-stream = "0.3"

# Network
hyper = { version = "1.1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database (because obviously we need a database now)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite", "migrate"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Serialization formats
toml = "0.8"
ron = "0.8"

# Observability  
prometheus = "0.13"
opentelemetry = "0.21"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
mockall = "0.12"
test-case = "3.3"
fake = "2.9"

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
